--- a/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
@@ -9,7 +9,10 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container" style="padding-top:5px;padding-bottom:25px;">
+        <a class="logo" href="~/Home/Index"></a>
+    </div>
+    <div class="navbar navbar-inverse navbar-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -23,27 +26,49 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="/Course/Index" role="button" aria-expanded="false">Courses</a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="~/Course/Index" role="button" aria-expanded="false">
+                            Courses
+                        </a>
                         <ul class="dropdown-menu">
-                            <li></li>
+                            <li>@Html.ActionLink("Introducation", "Index", "Course")</li>
+                            <li class="dropdown-sub">
+                                <a data-toggle="dropdown" href="~/Course/Agile" role="button" aria-expanded="false">
+                                    Agile
+                                </a>
+                                <ul class="dropdown-submenu">
+                                    <li>@Html.ActionLink("Certified Scrum Product Owner","Index","Course")</li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
-                    <li>@Html.ActionLink("Course","Index","Home")</li>
+                    <li>@Html.ActionLink("Classes","Index","Class")</li>
+                    <li>@Html.ActionLink("Instructor","Index","Instructor")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                </ul>
+                <ul class="nav navbar-nav navbar-form navbar-right">
+                    @using (Ajax.BeginForm("Search", "Home", new { genre = string.Empty },
+                        new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "main-content" }))
+                    {
+                        @Html.TextBox("Search", "", new { @class = "form-control", @style = "width:auto" })
+                        <button type="submit" class="btn btn-default">Search</button>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
     <div class="container body-content">
-        @RenderBody()
+        <div class="main-contnt">
+            @RenderBody()
+        </div>
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Course Registration System by .NET Team 1</p>
         </footer>
     </div>
 
+    @Scripts.Render("~/Content/css")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
