--- a/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
@@ -9,9 +9,20 @@
 
 </head>
 <body>
-    <div class="container" style="padding-top:5px;padding-bottom:25px;">
+    <div class="container" style="padding-top:5px;padding-bottom:2px;">
         <a class="logo" href="~/Home/Index"></a>
-    </div>
+        @using (Ajax.BeginForm("Search", "Home", new { genre = string.Empty },
+                new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "main-content" }))
+        {
+            <div class="input-group search">
+                @Html.TextBox("Search", "", new { @class = "form-control", @placeholder = "Search for..." })
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-default">Search</button>
+                </span>
+            </div>
+        }
+        
+        </div>
     <div class="navbar navbar-inverse navbar-top">
         <div class="container">
             <div class="navbar-header">
@@ -46,14 +57,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
-                <ul class="nav navbar-nav navbar-form navbar-right">
-                    @using (Ajax.BeginForm("Search", "Home", new { genre = string.Empty },
-                        new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "main-content" }))
-                    {
-                        @Html.TextBox("Search", "", new { @class = "form-control", @style = "width:auto" })
-                        <button type="submit" class="btn btn-default">Search</button>
-                    }
-                </ul>
+                
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
