--- a/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using CourseRegistration.Models
+@model IEnumerable<CourseRegistration.Models.Category>
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -22,7 +25,8 @@
             </div>
         }
         
-        </div>
+    </div>
+
     <div class="navbar navbar-inverse navbar-top">
         <div class="container">
             <div class="navbar-header">
@@ -42,14 +46,20 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Introducation", "Index", "Course")</li>
-                            <li class="dropdown-sub">
-                                <a data-toggle="dropdown" href="~/Course/Agile" role="button" aria-expanded="false">
-                                    Agile
-                                </a>
-                                <ul class="dropdown-submenu">
-                                    <li>@Html.ActionLink("Certified Scrum Product Owner","Index","Course")</li>
-                                </ul>
-                            </li>
+                            @foreach (var item in Model)
+                            {
+                                <li class="dropdown-sub">
+                                    <a data-toggle="dropdown" href="~/Course/Agile" role="button" aria-expanded="false">
+                                        @Html.DisplayFor(modelItem => item.CategoryName)
+                                    </a>
+                                    <ul class="dropdown-submenu">
+                                        @foreach (Course course in item.Courses)
+                                        { 
+                                            <li>@Html.ActionLink(course.CourseTitle, "Index", "Course")</li>
+                                        }
+                                    </ul>
+                                </li>
+                            }
                         </ul>
                     </li>
                     <li>@Html.ActionLink("Classes","Index","Class")</li>
