--- a/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
 ﻿@using CourseRegistration.Models
+@using CourseRegistration.BLL
+@{
+    List<Category> categories = CategoryBLL.Instance.getAllCategories();
+}
 
 <!DOCTYPE html>
 <html>
@@ -45,7 +49,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Introducation", "Index", "Course")</li>
-                            @foreach (Category item in ViewBag.Categories)
+                            @foreach (Category item in categories)
                             {
                                 <li class="dropdown-sub">
                                     <a data-toggle="dropdown" href="~/Course/Agile" role="button" aria-expanded="false">
