--- a/CourseRegistrationSystem/Views/Course/Index.cshtml
+++ b/CourseRegistrationSystem/Views/Course/Index.cshtml
@@ -7,14 +7,9 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.CreateDate)
         </th>
@@ -30,22 +25,15 @@
         <th>
             @Html.DisplayNameFor(model => model.NumberOfDays)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.enabled)
-        </th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsDeleted)
-        </td>
+    <tr>     
         <td>
             @Html.DisplayFor(modelItem => item.CreateDate)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.CourseTitle)
+            @Html.ActionLink(item.CourseTitle, "Details", new { id=item.CourseCode})
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CourseDescription)
@@ -55,15 +43,7 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.NumberOfDays)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.enabled)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CourseCode }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CourseCode }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CourseCode })
-        </td>
+        </td>       
     </tr>
 }
 
