--- a/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿@using CourseRegistration.Models
 @using CourseRegistration.BLL
 @{
-    List<Category> categories = CategoryBLL.Instance.getAllCategories();
+    List<Category> categories = CategoryBLL.Instance.GetAllCategories();
 }
 
 <!DOCTYPE html>
