--- a/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                             Courses
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Introducation", "Index", "Course")</li>
+                            <li>@Html.ActionLink("Introducation", "Courses", "Home")</li>
                             @foreach (Category item in categories)
                             {
                                 <li class="dropdown-sub">
