--- a/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="~/Course/Index" role="button" aria-expanded="false">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="~/Home/Course" role="button" aria-expanded="false">
                             Courses
                         </a>
                         <ul class="dropdown-menu">
@@ -80,11 +80,13 @@
     <div class="container body-content">
         <!--Content-->
         <div class="main-contnt">
+            
             @RenderBody()
         </div>
-        <hr />
+        
         <!--Footer-->
         <footer>
+            <hr />
             <p>&copy; @DateTime.Now.Year - Course Registration System by .NET Team 1</p>
         </footer>
     </div>
