--- a/CourseRegistrationSystem/Areas/CourseAdmin/CourseAdmin.Master
+++ b/CourseRegistrationSystem/Areas/CourseAdmin/CourseAdmin.Master
@@ -4,39 +4,40 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <title></title>
+<title>Head</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
+        Head
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form id="form1" runat="server">
+<form id="form1" runat="server">
     <div>
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        
-        </asp:ContentPlaceHolder>
+    <asp:ContentPlaceHolder ID="Path" runat="server">
+        Path
+    </asp:ContentPlaceHolder>
+</div>
+<div>
+    <asp:ContentPlaceHolder ID="Search" runat="server">
+        Search
+    </asp:ContentPlaceHolder>
+</div>
+    <div>
+          
+    <asp:Table ID="Table1" runat="server" style="width: 100%;height:100%" BorderStyle="Double" CellPadding="2" CellSpacing="2">
+        <asp:TableRow Width="100%" Height="70%">
+            <asp:TableCell Width ="30%">
+                <asp:ContentPlaceHolder ID="Menu" runat="server">
+                    Menu
+                </asp:ContentPlaceHolder>
+            </asp:TableCell>
+            <asp:TableCell Width="70%" Height="70%">
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                
+                </asp:ContentPlaceHolder>
+            </asp:TableCell>
+        </asp:TableRow>
+    </asp:Table>
     </div>
-        <asp:Menu ID="Menu1" runat="server" BackColor="#B5C7DE" DynamicHorizontalOffset="2" Font-Names="Verdana" Font-Size="0.8em" ForeColor="#284E98" StaticSubMenuIndent="10px">
-            <DynamicHoverStyle BackColor="#284E98" ForeColor="White" />
-            <DynamicMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
-            <DynamicMenuStyle BackColor="#B5C7DE" />
-            <DynamicSelectedStyle BackColor="#507CD1" />
-            <Items>
-                <asp:MenuItem Text="New Item" Value="New Item"></asp:MenuItem>
-                <asp:MenuItem Text="New Item" Value="New Item"></asp:MenuItem>
-                <asp:MenuItem Text="New Item" Value="New Item"></asp:MenuItem>
-                <asp:MenuItem Text="New Item" Value="New Item"></asp:MenuItem>
-                <asp:MenuItem Text="New Item" Value="New Item"></asp:MenuItem>
-                <asp:MenuItem Text="New Item" Value="New Item"></asp:MenuItem>
-                <asp:MenuItem Text="New Item" Value="New Item"></asp:MenuItem>
-                <asp:MenuItem Text="New Item" Value="New Item"></asp:MenuItem>
-            </Items>
-            <StaticHoverStyle BackColor="#284E98" ForeColor="White" />
-            <StaticMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
-            <StaticSelectedStyle BackColor="#507CD1" />
-        </asp:Menu>
-        <asp:CheckBox ID="CheckBox1" runat="server" />
-        <asp:LinkButton ID="LinkButton1" runat="server">LinkButton</asp:LinkButton>
-        <asp:Calendar ID="Calendar1" runat="server"></asp:Calendar>
-    </form>
+</form>
 </body>
 </html>
