--- a/CourseRegistrationSystem/Views/Course/Details.cshtml
+++ b/CourseRegistrationSystem/Views/Course/Details.cshtml
@@ -4,36 +4,14 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>@Model.CourseTitle</h2>
 
 <div>
-    <h4>Course</h4>
-    <hr />
+    <h4>Course Overview</h4>
+    <p>@Model.CourseDescription</p>
+    
     <dl class="dl-horizontal">
-        
-        <dt>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreateDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseTitle)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CourseTitle)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseDescription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CourseDescription)
-        </dd>
+       
 
         <dt>
             @Html.DisplayNameFor(model => model.Fee)
@@ -44,7 +22,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NumberOfDays)
+            @("Duration")
         </dt>
 
         <dd>
@@ -52,6 +30,7 @@
         </dd>
 
     </dl>
+    <hr />
 </div>
 <p>
     @Html.ActionLink("Back to List", "Index")
