--- a/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
@@ -1,8 +1,8 @@
 ﻿@using CourseRegistration.Models
 @using CourseRegistration.BLL
-@{
+@*@{
     List<Category> categories = CategoryBLL.Instance.GetAllCategories();
-}
+}*@
 
 <!DOCTYPE html>
 <html>
@@ -43,7 +43,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li class="dropdown">
+                    <li>@Html.ActionLink("Course","Index","Course")</li>
+                    @*<li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="~/Course/Index" role="button" aria-expanded="false">
                             Courses
                         </a>
@@ -52,10 +53,7 @@
                             @foreach (Category item in categories)
                             {
                                 <li class="dropdown-sub">
-                                    @*<a data-toggle="dropdown" href="~/Course/Agile" role="button" aria-expanded="false">
-                                        @Html.DisplayFor(modelItem => item.CategoryName)
-                                    </a>*@
-                                    @Html.ActionLink(item.CategoryName, "Index", "Course", new { id = item.CategoryId }, new { })
+                                    @Html.ActionLink(item.CategoryName, "Index", "Course")
                                     <ul class="dropdown-submenu">
                                         @foreach (Course course in item.Courses)
                                         {
@@ -65,7 +63,7 @@
                                 </li>
                             }
                         </ul>
-                    </li>
+                    </li>*@
                     <li>@Html.ActionLink("Classes","Index","Class")</li>
                     <li>@Html.ActionLink("Instructor","Index","Instructor")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
