--- a/CourseRegistrationSystem/Areas/CourseAdmin/CourseAdmin.Master
+++ b/CourseRegistrationSystem/Areas/CourseAdmin/CourseAdmin.Master
@@ -4,38 +4,44 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-<title>Title</title>
-    <asp:ContentPlaceHolder ID="head" runat="server" >
-        Head
-    </asp:ContentPlaceHolder>
+    <title>Course Admin Master</title>
 </head>
+
 <body>
 <form id="form1" runat="server">
-    <div>
-    <asp:ContentPlaceHolder ID="Path" runat="server">
 
-        <asp:Panel ID="Panel1" runat="server" HorizontalAlign="Left">
+    <div>
+        <asp:Panel ID ="Title" runat="server" Font-Size="X-Large" Font-Name="Verdana">
         <asp:Image ID="Image1" runat="server" ImageUrl="~/images/logo128.png"/>
+        <asp:ContentPlaceHolder ID="subTitle" runat="server">        
+        Title
+        </asp:ContentPlaceHolder>
         </asp:Panel>
-        
+    </div>
+
+    <div>
         <asp:Panel ID="Panel2" runat="server" HorizontalAlign="Right">
         <asp:Label ID="SayHello" runat="server" Text="Hello~" Font-Size="Large"></asp:Label>
         <asp:Button ID ="LogOff" runat="server" Text ="Log Off" OnClick="LogOff_Click" Font-Size="Large"></asp:Button>
         </asp:Panel>
         
-        <asp:Panel ID="Panel3" runat="server" HorizontalAlign="Left">
+    </div>
+
+    <div>
+        <asp:ContentPlaceHolder ID="Path" runat="server">        
+        <asp:Panel ID="Panel6" runat="server" HorizontalAlign="Left">
           <asp:SiteMapPath ID="SiteMapPath1" runat="server"></asp:SiteMapPath>
         </asp:Panel>
+        </asp:ContentPlaceHolder>
+    </div>
 
-    </asp:ContentPlaceHolder>
-</div>
-<div>
-    <asp:ContentPlaceHolder ID="Search" runat="server">
-        Search
-    </asp:ContentPlaceHolder>
-</div>
     <div>
-          
+        <asp:ContentPlaceHolder ID="Search" runat="server">
+        Search
+        </asp:ContentPlaceHolder>
+    </div>
+    
+    <div>      
     <asp:Table ID="Table1" runat="server" style="width: 100%;height:100%" BorderStyle="Double" CellPadding="2" CellSpacing="2">
         <asp:TableRow Width="100%" Height="70%">
             <asp:TableCell Width ="30%">
@@ -51,6 +57,7 @@
         </asp:TableRow>
     </asp:Table>
     </div>
+
 </form>
 </body>
 </html>
