--- a/CourseRegistrationSystem/Areas/SystemAdmin/SystemAdmin.Master
+++ b/CourseRegistrationSystem/Areas/SystemAdmin/SystemAdmin.Master
@@ -4,17 +4,58 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <title></title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+    <title>System Admin Master</title>
 </head>
 <body>
     <form id="form1" runat="server">
     <div>
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+        <asp:Panel ID ="Title" runat="server" Font-Size="X-Large" Font-Name="Verdana">
+        <asp:Image ID="Image1" runat="server" ImageUrl="~/images/logo128.png"/>
+        <asp:ContentPlaceHolder ID="subTitle" runat="server">        
+        Title
+        </asp:ContentPlaceHolder>
+        </asp:Panel>
+    </div>
+
+    <div>
+        <asp:Panel ID="Panel2" runat="server" HorizontalAlign="Right">
+        <asp:Label ID="SayHello" runat="server" Text="Hello~" Font-Size="Large"></asp:Label>
+        <asp:Button ID ="LogOff" runat="server" Text ="Log Off" OnClick="LogOff_Click" Font-Size="Large"></asp:Button>
+        </asp:Panel>
         
+    </div>
+
+    <div>
+        <asp:ContentPlaceHolder ID="Path" runat="server">        
+        <asp:Panel ID="Panel6" runat="server" HorizontalAlign="Left">
+          <asp:SiteMapPath ID="SiteMapPath1" runat="server"></asp:SiteMapPath>
+        </asp:Panel>
         </asp:ContentPlaceHolder>
     </div>
+
+    <div>
+        <asp:ContentPlaceHolder ID="Search" runat="server">
+        Search
+        </asp:ContentPlaceHolder>
+    </div>
+    
+    <div>      
+    <asp:Table ID="Table1" runat="server" style="width: 100%;height:100%" BorderStyle="Double" CellPadding="2" CellSpacing="2">
+        <asp:TableRow Width="100%" Height="70%">
+            <asp:TableCell Width ="30%">
+                <asp:ContentPlaceHolder ID="Menu" runat="server">
+                    Menu
+                </asp:ContentPlaceHolder>
+            </asp:TableCell>
+            <asp:TableCell Width="70%" Height="70%">
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                
+                </asp:ContentPlaceHolder>
+            </asp:TableCell>
+        </asp:TableRow>
+    </asp:Table>
+    </div>
+
     </form>
 </body>
 </html>
