--- a/CourseRegistrationSystem/Views/Home/Contact.cshtml
+++ b/CourseRegistrationSystem/Views/Home/Contact.cshtml
@@ -1,6 +1,12 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
+
+<ul class="breadcrumb">
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li>Contact</li>
+</ul>
+
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
