--- a/CourseRegistrationSystem/Views/Instructor/Index.cshtml
+++ b/CourseRegistrationSystem/Views/Instructor/Index.cshtml
@@ -5,6 +5,11 @@
     ViewBag.Title = "Index";
 }
 
+<ul class="breadcrumb">
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li>Instructor</li>
+</ul>
+
 <h2>Instructor List</h2>
 
 <ul>
