--- a/CourseRegistrationSystem/Views/Class/Index.cshtml
+++ b/CourseRegistrationSystem/Views/Class/Index.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Index";
 }
 
+<ul class="breadcrumb">
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li>Class</li>
+</ul>
+
 <h2>Class List</h2>
 
 
