--- a/CourseRegistrationSystem/Areas/CourseAdmin/CourseAdmin.Master
+++ b/CourseRegistrationSystem/Areas/CourseAdmin/CourseAdmin.Master
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<form id="form1" runat="server">
+<form id="form1" runat="server" method="post">
 
     <div>
         <asp:Panel ID ="Title" runat="server" Font-Size="X-Large" Font-Name="Verdana">
