--- a/CourseRegistrationSystem/Views/Course/Index.cshtml
+++ b/CourseRegistrationSystem/Views/Course/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="row" style="margin:auto;">
-    <div class="col-sm-3 col-md-2 sidebar" style="position:absolute;top: auto;left:auto;overflow-y:hidden;bottom:auto;">
+    <div class="col-sm-3 col-md-2 col-lg-2 sidebar" style="position:absolute;top: auto;left:auto;overflow-y:hidden;bottom:auto;">
         <ul class="nav nav-sidebar">
             <li class="active"><a>Category</a></li>
             <li>@Html.ActionLink("Introduction","Index","Course")</li>
@@ -25,7 +25,7 @@
             <li>@Html.ActionLink("Class1", "Index", "Classes")</li>
         </ul>
     </div>
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 col-lg-10 col-lg-offset-2 main">
         <div id="courselist">
             <ul class="breadcrumb">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
