--- a/CourseRegistrationSystem/Views/Class/RegisterClass.cshtml
+++ b/CourseRegistrationSystem/Views/Class/RegisterClass.cshtml
@@ -27,7 +27,7 @@
     </div>
     <div class="collapse" id="collapse1">
         <div class="panel-body">
-            glyphicon glyphicon-chevron-up
+            @*@Html.Partial("ParticipantView")*@
         </div>
     </div>
 </div>
